--- a/css/main.css
+++ b/css/main.css
@@ -1022,7 +1022,7 @@ left: 19%;
 
 
 .bg{
-  background-image: url(/colorlib-search-23/images/bg.jpg);
+  background-image: url(/images/bg.jpg);
   resize: both;
   background-size: cover;
   background-position: center;
